--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.13",
+    "particles.js": "^2.0.0",
     "register-service-worker": "^1.5.2",
     "socket.io-client": "^2.2.0",
     "vue": "^2.6.6",
