--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   "author": "Onur Iltan",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.4",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "dotenv": "^6.2.0",
     "esm": "^3.2.5",
     "express": "^4.16.4",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.19",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-facebook-token": "^3.3.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
