--- a/client/.env.development
+++ b/client/.env.development
@@ -1,2 +1,4 @@
 VUE_APP_API_URL=http://localhost:5000
+VUE_APP_AUTH_URL=http://localhost:5000/api/auth
 VUE_APP_SOCKET_URL=http://localhost:5000
+VUE_APP_FACEBOOK_APP_ID=2372831419435310
