--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "esm": "^3.2.5",
     "express": "^4.16.4",
