developments on fb auth

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Chat App with Node.js Vue.js",
   "main": "server/app.js",
   "scripts": {
-    "start": "node -r esm server/app.js",
-    "dev": "nodemon -r esm server/app.js"
+    "start": "node server/app.js",
+    "dev": "nodemon server/app.js"
   },
   "author": "Onur Iltan",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.4",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
