--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,23 @@
   "name": "dimondchat",
   "version": "1.0.0",
   "description": "Chat App with Node.js Vue.js",
-  "main": "server/app.js",
+  "main": "main/app.ts",
   "scripts": {
-    "start": "node server/app.js",
-    "dev": "nodemon server/app.js"
+    "start": "node build/app.js",
+    "dev": "npm run build:live",
+    "build": "tsc -p .",
+    "build:live": "nodemon --watch '*.ts' --exec 'ts-node' main/app.ts",
+    "tsc": "tsc"
   },
   "author": "Onur Iltan",
   "license": "MIT",
   "dependencies": {
+    "@types/express": "^4.16.1",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.4",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
+    "concurrently": "^4.1.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
@@ -22,9 +27,11 @@
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.19",
     "passport": "^0.4.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "typescript": "^3.3.3333"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "ts-node": "^8.0.3"
   }
 }
