--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.16.1",
+    "@types/socket.io": "^2.1.2",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.4",
     "bcrypt-nodejs": "0.0.3",
