--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.1",
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/mongodb": "^3.1.22",
     "@types/mongoose": "^5.3.22",
     "@types/socket.io": "^2.1.2",
     "axios": "^0.18.0",
@@ -30,6 +32,7 @@
     "dotenv": "^6.2.0",
     "esm": "^3.2.5",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.0",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.19",
     "passport": "^0.4.0",
