--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongodb": "^3.1.22",
     "@types/mongoose": "^5.3.22",
+    "@types/morgan": "^1.7.35",
     "@types/socket.io": "^2.1.2",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.4",
@@ -35,6 +36,7 @@
     "jsonwebtoken": "^8.5.0",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.19",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "socket.io": "^2.2.0",
     "typescript": "^3.3.3333"
