--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ node_modules
 /server/build
 
 # local env files
+.env
 .env.local
 .env.*
 .env.*.local
@@ -24,5 +25,3 @@ yarn-error.log*
 *.sln
 *.sw*
 
-# Env file
-/server/.env
