--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "particles.js": "^2.0.0",
     "register-service-worker": "^1.5.2",
     "socket.io-client": "^2.2.0",
+    "typeit": "^6.0.2",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
