--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "socket.io-client": "^2.2.0",
     "typeit": "^6.0.2",
     "vue": "^2.6.6",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4"
