--- a/client/package.json
+++ b/client/package.json
@@ -11,29 +11,28 @@
   },
   "dependencies": {
     "axios": "^0.18.1",
-    "bootstrap-vue": "^2.0.0-rc.28",
+    "bootstrap-vue": "^2.0.4",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^2.2.0",
     "particles.js": "^2.0.0",
     "register-service-worker": "^1.6.2",
-    "socket.io-client": "^2.2.0",
-    "typeit": "^6.0.3",
+    "socket.io-client": "^2.3.0",
+    "typeit": "^6.1.0",
     "vue": "^2.6.10",
     "vue-carousel": "^0.18.0",
-    "vue-router": "^3.1.2",
+    "vue-router": "^3.1.3",
     "vuex": "^3.1.1",
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-plugin-pwa": "^3.11.0",
-    "@vue/cli-plugin-unit-mocha": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-plugin-pwa": "^3.12.1",
+    "@vue/cli-plugin-unit-mocha": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-airbnb": "^4.0.1",
     "@vue/test-utils": "^1.0.0-beta.20",
-    "babel-eslint": "^10.0.2",
+    "babel-eslint": "^10.0.3",
     "chai": "^4.1.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
