--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/query-string": "^6.3.0",
     "@types/request": "^2.48.3",
     "@types/socket.io": "^2.1.4",
+    "@types/node": "^11.13.22",
     "axios": "^0.18.1",
     "bcrypt": "^3.0.6",
     "bcrypt-nodejs": "0.0.3",
@@ -48,9 +49,9 @@
     "typescript": "^3.6.4"
   },
   "devDependencies": {
-    "@types/node": "^11.13.22",
     "concurrently": "^5.0.0",
     "nodemon": "^1.19.4",
-    "ts-node": "^8.4.1"
+    "ts-node": "^8.4.1",
+    "tslint": "^5.20.0"
   }
 }
